tests/fails/f43.t

terra foo()
  while 1 do end
end
foo()